--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "url": "https://github.com/flicat"
   },
   "devDependencies": {
-    "glob": "^10.3.10"
+    "vite": "^5.2.6",
+    "vue": "^3.3.8"
   },
   "peerDependencies": {
     "svgo": "^3.2.0",
-    "vue": "^3.3.8",
-    "vite": "^5.2.6"
+    "glob": "^10.3.10"
   },
   "repository": {
     "type": "git",
